--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@
 }
 
 body {
-    background: rgba(57, 57, 57, 0.7);
     line-height: 1.6;
     height: 100vh;
     overflow: hidden;
@@ -87,6 +86,7 @@ body {
 #about {
     display: flex;
     justify-content: space-evenly;
+    background-color: grey;
     height: 100vh;
 
 }
@@ -111,6 +111,15 @@ body {
 
 #contact {
     width: 100%;
-    height: 50vh;
+    height: 30vh;
+}
 
+.icon {
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    padding: 5rem;
+    font-size: 5rem;
+    color: blue;
+    background-color: black;
 }
