--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
 }
 
 .container {
-    width: 100%;
     height: 100%;
     /* Css Smooth Scroll */
     overflow-y: scroll;
@@ -79,7 +78,6 @@ body {
     display: flex;
     flex-direction: column;
     text-align: center;
-    width: 100%;
     height: 100vh;
 }
 
@@ -99,12 +97,11 @@ body {
     color: rgba(1, 1, 1, 0.7);
 }
 
-#skills ul {
+#skills {
     background-image: url(./img/skills.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    width: 100%;
     height: 100vh;
 }
 
