--- a/style.css
+++ b/style.css
@@ -90,11 +90,25 @@ body {
 }
 
 .list {
-    display: flex;
-    padding-top: 5rem;
-    flex-direction: column;
     font-family: 'merriweather', serif;
     color: rgba(1, 1, 1, 0.7);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.list h2{
+    text-decoration: underline;
+    text-decoration-style: dotted;
+}
+
+
+.list ul li {
+    list-style: none;
+    padding-top: 2rem;
+    font-size: 1rem;
+    
+
 }
 
 #skills {
