--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ body {
     display: flex;
     width: 100%;
     height: 4rem;
-    background: rgba(1, 1, 1, 0.7);
+    background: rgba(1, 1, 1, 0.3);
 }
 
 .navbar ul {
@@ -53,7 +53,7 @@ body {
     font-size: 5rem;
     font-family: 'Merriweather', serif;
     color: rgba(245, 245, 245, 0.8);
-    margin-top: 5rem;
+    padding-top: 5rem;
 }
 
 #home h2 {
@@ -71,7 +71,7 @@ body {
 
 /* section background or Images */
 #home {
-    background-color: black;
+    background-color: rgb(82, 78, 78);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
