--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
     line-height: 1.6;
     height: 100vh;
     overflow: hidden;
+    font-size: 1rem;
+    background-color: grey;
 }
 
 .container {
@@ -66,27 +68,25 @@ body {
     font-size: 2rem;
     font-family: 'Merriweather', serif;
     color: rgba(245, 245, 245, 0.8);
-    display: flex;
 }
 
 /* section background or Images */
 #home {
-    background-color: rgb(82, 78, 78);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
     flex-direction: column;
     text-align: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #about {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
-    background-color: grey;
-    height: 100vh;
-
+    align-items: flex-start;
+    min-height: 100vh;
 }
 
 .list {
@@ -111,18 +111,17 @@ body {
 }
 
 #skills {
-    background-image: url(./img/skills.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 #skills ul {
     font-size: 1.5rem;
     font-style: italic;
     text-align: center;
-    padding-top: 300px;
+
 }
 
 
@@ -135,9 +134,8 @@ body {
     justify-content: space-around;
     flex-direction: row;
     font-size: 5rem;
-    background-color: black;
 }
 
 .icon a {
-    color: blue;
+    color: white;
 }
