--- a/style.css
+++ b/style.css
@@ -83,10 +83,12 @@ body {
 
 #about {
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-items: flex-start;
     min-height: 100vh;
+    justify-content: center;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    
+
 }
 
 .list {
@@ -94,7 +96,7 @@ body {
     color: rgba(1, 1, 1, 0.7);
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    padding: 2rem;
 }
 
 .list h2 {
@@ -115,13 +117,17 @@ body {
     background-size: cover;
     background-position: center;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 #skills ul {
     font-size: 1.5rem;
     font-style: italic;
     text-align: center;
-
+    list-style: none;
 }
 
 
