--- a/style.css
+++ b/style.css
@@ -82,20 +82,18 @@ body {
 }
 
 #about {
-    display: flex;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     min-height: 100vh;
+    display: flex;
+    align-items: center;
     justify-content: center;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    
-
 }
 
 .list {
     font-family: 'merriweather', serif;
     color: rgba(1, 1, 1, 0.7);
-    display: flex;
-    flex-direction: column;
     padding: 2rem;
 }
 
