--- a/style.css
+++ b/style.css
@@ -72,13 +72,17 @@ body {
 
 /* section background or Images */
 #home {
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+
     display: flex;
     flex-direction: column;
     text-align: center;
     min-height: 100vh;
+}
+
+#home .video {
+    background-size: cover;
+    background-position: center;
+
 }
 
 #about {
@@ -111,6 +115,7 @@ body {
 }
 
 #skills {
+    background-image: url(./skills.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
