--- a/style.css
+++ b/style.css
@@ -16,14 +16,12 @@ body {
     /* Css Smooth Scroll */
     overflow-y: scroll;
     scroll-behavior: smooth;
-    width: 100vw;
 }
 
 .navbar {
     position: fixed;
     top: 0;
     z-index: 1;
-    display: flex;
     width: 100%;
     height: 4rem;
     background: rgba(1, 1, 1, 0.3);
@@ -85,26 +83,26 @@ body {
     background-size: cover;
     background-position: center;
     min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
 }
 
 .list {
     font-family: 'merriweather', serif;
     color: rgba(1, 1, 1, 0.7);
-    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
 }
 
 .list h2 {
     text-decoration: underline;
     text-decoration-style: dotted;
+    margin-top: 5rem;
 }
 
 
 .list ul li {
     list-style: none;
-    padding-top: 2rem;
     font-size: 1.5rem;
     font-style: italic;
 }
@@ -116,7 +114,6 @@ body {
     background-position: center;
     min-height: 100vh;
     display: flex;
-    align-items: center;
     justify-content: center;
 
 }
@@ -127,6 +124,7 @@ body {
     text-align: center;
     list-style: none;
     font-weight: bolder;
+    margin-top: 5rem;
     color: rgb(0, 0, 0);
 }
 
