--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ body {
     height: 100vh;
     overflow: hidden;
     font-size: 1rem;
-    background-color: grey;
 }
 
 .container {
@@ -63,12 +62,6 @@ body {
     color: rgba(245, 245, 245, 0.8);
 }
 
-#about h2 {
-    font-size: 2rem;
-    font-family: 'Merriweather', serif;
-    color: rgba(245, 245, 245, 0.8);
-}
-
 /* section background or Images */
 #home {
     background-image: url(./img/home.jpg);
@@ -79,25 +72,25 @@ body {
 }
 
 #about {
+    background-image: url(./img/about.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     min-height: 100vh;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .list {
     font-family: 'merriweather', serif;
-    color: rgba(1, 1, 1, 0.7);
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+    color: rgba(245, 245, 245, 0.8);
 }
 
 .list h2 {
     text-decoration: underline;
     text-decoration-style: dotted;
-    margin-top: 5rem;
+    font-size: 2rem;
 }
 
 
@@ -105,6 +98,8 @@ body {
     list-style: none;
     font-size: 1.5rem;
     font-style: italic;
+    font-weight: bolder;
+    padding: 1rem;
 }
 
 #skills {
@@ -125,7 +120,7 @@ body {
     list-style: none;
     font-weight: bolder;
     margin-top: 5rem;
-    color: rgb(0, 0, 0);
+    color: rgba(245, 245, 245, 0.8);
 }
 
 #contact {
