--- a/style.css
+++ b/style.css
@@ -80,11 +80,13 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    column-fill: auto;
 }
 
 .list {
     font-family: 'merriweather', serif;
     color: rgba(245, 245, 245, 0.8);
+
 }
 
 .list h2 {
